pty: sail upgrade never kills a session — master fds live in systemd's fd store
Every pty master is pushed to the manager's file descriptor store the
moment its session is created (SdNotify: sd_notify with SCM_RIGHTS over
$NOTIFY_SOCKET), so a restart or a crash of the pty host hands the
session to the next host intact: same instanceId, the same boot id kept
in host.boot, the keyboard holder restored from a sidecar beside the
ring, replay continuous. The exit status crosses the gap through the
file the new `sail _pty-child` shim records; a missing one ends the
session loudly, never as a silent 0. On SIGTERM the host asks systemd
whether it is a stop or a restart: a stop ends every session loudly,
a restart hands off. The first upgrade past a unit without the store
still ends sessions and says so.

Two latent bugs found under real systemd: the host opened the pty slave
itself and became its controlling terminal (the child opens it now), and
a ring nobody had written to yet was unreadable on reopen.